# estudos_rust

./: .env  .gitignore  Cargo.toml  README.md  migration.sh  querys.txt
src/: main.rs  server.rs
src/bk/models/: acesso.rs  mod.rs
src/bk/repositories/: acesso_repository.rs  mod.rs
src/bk/utils/: controller.rs  mod.rs
src/model/: mod.rs
src/models/: mod.rs  visitante_model.rs
src/repositories/: conn.rs  mod.rs  visitante_repositories.rs  visitantes_repositories.rs
src/routes/: adm.rs  ativacoes.rs  brindes.rs  checkin.rs  clientes.rs  mod.rs  root.rs  routes.rs  stands.rs  visitantes.rs
src/utils/: cliente_model.rs  controller.rs  interface.rs  mod.rs  tuplaselistas.rs
