[package]
name = "aula03"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = "0.27.0"
regex = "1.10.4"
chrono = "0.4.19"
diesel = { version = "1.4.7", features = ["postgres"] }
dotenv = "0.15.0"
postgres = "0.17.4"
actix-web = "4"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"